--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@dano-inc/design-system": "^2.0.0-rc.54",
+    "@dano-inc/design-token": "^2.0.0-rc.54",
+    "@dano-inc/react-icons": "^2.0.0-rc.54",
+    "@dano-inc/stitches-react": "^2.0.0-rc.54",
     "@remix-run/react": "^1.1.1",
+    "@remix-run/serve": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.1",
-    "@remix-run/serve": "^1.1.1"
+    "remix": "^1.1.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
