--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@dano-inc/stitches-react": "^2.0.0-rc.54",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@stitches/react": "^1.2.6",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
     "@types/react": "^17.0.24",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.9",
     "typescript": "^4.1.2"
   },
