ci: npmrc auth 변경

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @dano-inc:registry=https://npm.infra.seoul.kube.dano.me/
-//npm.infra.seoul.kube.dano.me/:_authToken=${TOKEN_FOR_NPM}
+//npm.infra.seoul.kube.dano.me/:always-auth=true
