ci: npmrc auth 수정

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @dano-inc:registry=https://npm.infra.seoul.kube.dano.me/
+//npm.infra.seoul.kube.dano.me/:_authToken=${NPM_TOKEN}
 //npm.infra.seoul.kube.dano.me/:always-auth=true
