--- a/package.json
+++ b/package.json
@@ -4,33 +4,42 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "build": "cross-env NODE_ENV=production remix build",
+    "dev": "cross-env NODE_ENV=development run-p dev:*",
+    "postinstall": "remix setup cloudflare-pages",
+    "dev:remix": "remix watch",
+    "dev:wrangler": "wrangler pages dev ./public --watch ./build",
+    "start": "npm run dev:wrangler"
   },
   "dependencies": {
     "@dano-inc/design-system": "^2.0.0-rc.54",
     "@dano-inc/design-token": "^2.0.0-rc.54",
     "@dano-inc/react-icons": "^2.0.0-rc.54",
     "@dano-inc/stitches-react": "^2.0.0-rc.54",
-    "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@stitches/react": "^1.2.6",
-    "react": "^17.0.2",
+    "@remix-run/react": "^1.1.3",
     "react-copy-to-clipboard": "^5.0.4",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.1"
+    "remix": "^1.1.3",
+    "@remix-run/cloudflare-pages": "^1.1.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.1",
+    "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
-    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.9",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "@types/react-copy-to-clipboard": "^5.0.2",
+    "@cloudflare/workers-types": "^3.2.0",
+    "cross-env": "^7.0.3",
+    "esbuild": "0.13.14",
+    "npm-run-all": "^4.1.5",
+    "wrangler": "alpha"
   },
   "engines": {
     "node": ">=14"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "main": "dist/worker.js"
 }
