--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
     "@dano-inc/design-token": "^2.0.0-rc.54",
     "@dano-inc/react-icons": "^2.0.0-rc.54",
     "@dano-inc/stitches-react": "^2.0.0-rc.54",
+    "@remix-run/cloudflare-pages": "^1.1.3",
+    "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.1",
     "@stitches/react": "^1.2.6",
-    "@remix-run/react": "^1.1.3",
-    "react-copy-to-clipboard": "^5.0.4",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.3",
-    "@remix-run/cloudflare-pages": "^1.1.3"
+    "remix": "^1.1.3"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.2.0",
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "typescript": "^4.1.2",
     "@types/react-copy-to-clipboard": "^5.0.2",
-    "@cloudflare/workers-types": "^3.2.0",
+    "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
     "esbuild": "0.13.14",
+    "npm": "^8.4.1",
     "npm-run-all": "^4.1.5",
+    "typescript": "^4.1.2",
     "wrangler": "alpha"
   },
   "engines": {
