--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.1",
     "@stitches/react": "^1.2.6",
+    "html-to-image": "^1.9.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
