--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@dano-inc/design-token": "^2.0.0-rc.57",
     "@dano-inc/react-icons": "^2.0.0-rc.57",
     "@dano-inc/stitches-react": "^2.0.0-rc.57",
+    "@radix-ui/react-toast": "^1.1.2",
     "@remix-run/cloudflare-pages": "^1.1.3",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.1",
-    "@stitches/react": "^1.2.6",
+    "@stitches/react": "^1.2.8",
     "html-to-image": "^1.9.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
