--- a/package.json
+++ b/package.json
@@ -30,13 +30,20 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
     "@remix-run/dev": "^1.1.3",
+    "@remix-run/eslint-config": "^1.11.1",
     "@types/react": "^17.0.24",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "cross-env": "^7.0.3",
     "esbuild": "0.13.14",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "npm": "^8.4.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.3",
     "typescript": "^4.1.2",
     "wrangler": "alpha"
   },
