--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/serve": "^1.1.1",
     "@stitches/react": "^1.2.8",
     "html-to-image": "^1.9.0",
+    "polished": "^4.2.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
