--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@types/react": "^17.0.24",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
     "esbuild": "0.13.14",
     "npm": "^8.4.1",
     "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.1.2",
     "wrangler": "alpha"
   },
