--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 node_modules
 
 /.cache
-/build
+/functions/\[\[path\]\].js
+/functions/\[\[path\]\].js.map
+/functions/metafile.*
 /public/build
+.dev.vars
