refactor: remove dano-inc library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,9 @@
   },
   "[rust]": {
     "editor.defaultFormatter": "dprint.dprint"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "dprint.dprint",
+    "editor.formatOnSave": true
   }
 }
