--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@dano-inc/design-system": "^2.0.0-rc.57",
-    "@dano-inc/design-token": "^2.0.0-rc.57",
-    "@dano-inc/react-icons": "^2.0.0-rc.57",
-    "@dano-inc/stitches-react": "^2.0.0-rc.57",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
     "@remix-run/cloudflare": "^1.19.3",
     "@remix-run/cloudflare-pages": "^1.19.3",
     "@remix-run/css-bundle": "^1.19.3",
@@ -25,6 +24,7 @@
     "clsx": "^2.0.0",
     "html-to-image": "^1.9.0",
     "isbot": "^3.6.8",
+    "lucide-react": "^0.276.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
